--- a/AnimeHubClient/wwwroot/index.html
+++ b/AnimeHubClient/wwwroot/index.html
@@ -35,7 +35,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
-
+    <script src="js/InfiniteScrollHelper.js"></script>
 </body>
 
 </html>
