--- a/AnimeHubClient/wwwroot/index.html
+++ b/AnimeHubClient/wwwroot/index.html
@@ -37,6 +37,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
     <script src="js/InfiniteScrollHelper.js"></script>
     <script src="js/SmartNavBar.js"></script>
+    <script src="js/Position.js"></script>
 
 </body>
 
